new draft that includes breaking log examples into blocks withd descriptions
Signed-off-by: MelHopper <melanieh@uk.ibm.com>